--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -41,6 +41,7 @@ body {
     justify-content: end;
     align-items: flex-end;
     padding-top: 5px;
+    padding-left: 20px;
 }
 
 .gen-info .right div {
@@ -85,6 +86,10 @@ body {
 
 .email {
     margin: 5px 0px 3px 0px;
+}
+
+#email {
+    width: 220px;
 }
 
 input,
