--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -193,7 +193,7 @@ h5 {
     padding: 4px 0px 20px 0px;
 }
 
-.skill input {
+.item input {
     font-weight: 200;
     font-size: .8rem;
 }
@@ -250,7 +250,7 @@ h5 {
     padding: 5px 10px;
     border: none;
     cursor: pointer;
-    margin-bottom: 10px;
+    margin: 10px 0px;
     font-weight: 400;
     color: var(--charcoal);
 }
